# camera-esp32

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt
main/inc/: camera.h  main.h
main/src/: camera.c  main.c
